--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link href="./src/reset/reset.css" rel="stylesheet">
     <title>elm</title>
   </head>
   <body>
